--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
 
         <div id="message"></div>
         <div id="setting"></div>
-        <div id="modal"></div>
+        <div id="modal" class="modal" tabindex="0"></div>
     </div>
     <script type="text/javascript">
         window.$ = window.jQuery = require('jquery');
