update monaco-editor to 0.9.0 and clean index.html tags

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,8 @@
-<!doctype html>
-<html class="no-js" lang="en">
+<!DOCTYPE html>
+<html>
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> Husky </title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
     <link rel="stylesheet" href="css/vendor.css">
     <!-- Theme initialization -->
@@ -72,7 +67,7 @@
         }
 
         amdRequire.config({
-            baseUrl: uriFromPath(path.join(__dirname, './node_modules/monaco-editor/dev'))
+            baseUrl: uriFromPath(path.join(__dirname, './node_modules/monaco-editor/min'))
         });
 
         // workaround monaco-css not understanding the environment
